--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Venom 2 - сайт о фильме</title>
+    <title>Главная - Venom 2</title>
 </head>
 <body class="blood">
     <div class="container">
@@ -19,7 +19,7 @@
             <nav class="nav">
                 <ul class="nav-menu">
                     <li class="nav-menu-item">
-                        <a href="#" class="nav-menu-link">о фильме</a>
+                        <a href="about.html" class="nav-menu-link">о фильме</a>
                     </li>
                     <li class="nav-menu-item">
                         <a href="#" class="nav-menu-link">трейлер</a>
